--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "socket.io-client": "^4.2.0",
     "uuid": "^8.3.2"
   }
 }
